<resources>
    <string name="app_name">SoftWhere</string>
    <string name="programming_languages">Programming Languages</string>
    <string name="info">Info</string>
    <string name="various_occupations">Various Jobs</string>
    <string name="my_developer">Developed by Sagar Singh</string>
    <string name="description">Description:</string>
    <string name="contents">Contents:</string>
    <string name="no_jobs">No Jobs Available</string>
    <string name="no_languages">No Languages Available</string>
    <string name="salary">Salary:</string>
    <string name="job_description">Job Description:</string>
    <string name="skills_involved">Skills Involved:</string>
    <string name="link">Link:</string>
    <string name="visit">Visit The Website</string>
    <string name="job_title">Job Title</string>
    <string name="type">Type:</string>
    <string name="update">Update</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string-array name="filter_items">
        <item>All</item>
        <item>Unseen</item>
        <item>Start</item>
        <item>Completed</item>
    </string-array>
</resources>