<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentInfoDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/VeryLightGreyBackground"
    tools:context=".InnerViews.InfoDetailsActivity">

    <TextView
        android:id="@+id/textViewInfoDetailMainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/DarkBlueBackground"
        android:gravity="center"
        android:letterSpacing="0.1"
        android:text="@string/info"
        android:textAllCaps="true"
        android:textColor="@color/LightGreyBackground"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <ScrollView
        android:id="@+id/scrollViewInfoDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfoDetailMainTitle"
        app:layout_constraintVertical_bias="0.0"
        android:paddingBottom="30dp"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollViewInfoDetailConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvInfoDetailDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/description"
                android:textColor="@color/DescriptionTextBlack"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewInfoDetailDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="TextView"
                android:textColor="@color/DescriptionTextBlack"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvInfoDetailDescription" />

            <TextView
                android:id="@+id/tvInfoDetailsContents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/contents"
                android:textColor="@color/DescriptionTextBlack"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewInfoDetailDescription" />

            <TextView
                android:id="@+id/textViewInfoDetailContents"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="TextView"
                android:textColor="@color/DescriptionTextBlack"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvInfoDetailsContents" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>